# pywin32

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.txt  build_mingw.ps1  format_all.bat  make_all.bat  mypy.ini  pycln.toml  pyproject.toml  pyrightconfig.json  pywin32_postinstall.py  pywin32_testall.py  ruff.toml  setup.py
.github/workflows/: docs.yml  main.yml
AutoDuck/: BuildHHP.py  Dump2HHC.py  InsertExternalOverviews.py  TOCToHHK.py  document_object.py  makedfromi.py  py2d.py
Pythonwin/: stdafx.h  win32notify.cpp  win32uimodule.cpp  win32uioledoc.cpp  win32util.cpp
Pythonwin/Scintilla/: README_pythonwin  README_pythonwin.md
Pythonwin/doc/: EmbeddingWin32ui.html  architecture.html
Pythonwin/pywin/: default.cfg
SWIG/: swig_wine.ps1
adodbapi/: __init__.py  adodbapi.py  apibase.py  process_connect_string.py  remote.py  setup.py
adodbapi/examples/: db_print.py  xls_write.py
adodbapi/remote/: server.py
adodbapi/test/: adodbapitest.py  adodbapitestconfig.py  dbapi20.py  setuptestframework.py  test_adodbapi_dbapi20.py
com/win32com/: __init__.py  storagecon.py  universal.py
h2py/: __main__.py  h2py.py
isapi/: install.py  simple.py  threaded_extension.py
isapi/samples/: advanced.py  redirector.py  redirector_asynch.py  redirector_with_filter.py  test.py
isapi/test/: extension_simple.py
win32/Demos/: BackupRead_BackupWrite.py  BackupSeek_streamheaders.py  CopyFileEx.py  CreateFileTransacted_MiniVersion.py  EvtSubscribe_pull.py  EvtSubscribe_push.py  FileSecurityTest.py  NetValidatePasswordPolicy.py  OpenEncryptedFileRaw.py  cerapi.py  (+21 more)
(+319 files in other folders)
